Fri Jun 20 20:33:41 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/AMH_Exceptions/run_test.pl:
        * tests/Param_Test/run_test.pl:
        * tests/Hello/run_test.pl:
        * tests/CallbackTest/run_test.pl:
        * tests/Codec/run_test.pl:
        * tests/Collocation/run_test.pl: Change test component references from
          names ("client", "server") to numbers per new convention.
          See ACE ChangeLog
          Fri Jun 20 20:25:12 UTC 2008  Steve Huston  <shuston@riverace.com>

        * tests/Bug_2702_Regression/run_test.pl:
        * tests/Oneway_Send_Timeouts/run_test.pl:
        * tests/Abstract_Interface/run_test.pl: Converted to use new test
          framework.

Fri Jun 20 14:32:52 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * tests/OctetSeq/run_test.pl:

          Reverted my change from Mon Jun  9 12:28:24 UTC 2008.  The test
          framework is moving in a different direction.

Fri Jun 20 14:15:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * orbsvcs/orbsvcs/Notify/MonitorControl/MonitorManager.h:

          Incorrect ACE_ARGV_T base character type corrected.

Fri Jun 20 12:23:19 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * examples/RTScheduling/DT_Creator.cpp:

          Fixed a memory leak and a time_t conversion warning.

        * examples/RTScheduling/Task_Stats.h:
        * examples/RTScheduling/Task_Stats.inl:
        * examples/RTScheduling/Task_Stats.cpp:

          Use time_t for time related data to avoid the need to cast.

        * examples/RTScheduling/Job_i.cpp:

          Removed static_cast's that are no longer needed.

Thu Jun 19 17:38:09 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/Reliable_Oneways/client.cpp:

          Remove redundant "" 3rd parameter (orbID) from ORB_init() calls.

Thu Jun 19 16:49:23 UTC 2008  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * performance-tests/CSD_Strategy/TestApps/ClientApp.cpp: