@@ -42,7 +42,7 @@ bgcolor="#ffffff">
           reduce the compilation times and memory footprints for
           ACE+TAO and its applications. <P>
 
-      <dt> <img alt="o" src="redball.gif"> <a HREF="Tags.html">Tags and Magic Numbers</a> </dt><P>
+      <LI> <a HREF="Tags.html">Tags and Magic Numbers</a> </dt><P>
     </UL>
   </BODY>
 
